--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/spring_course
 spring.datasource.username=root
 spring.datasource.password=spring_course
 spring.jpa.show-sql=true
+
+jwt.secret=SecretToSignToken
+jwt.expiration=60000
