Create test profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/spring_course
-spring.datasource.username=root
-spring.datasource.password=spring_course
-spring.jpa.show-sql=true
+spring.profiles.active=test
 
 jwt.secret=SecretToSignToken
 jwt.expiration=60000
