Add MockMailService with TemplateMethod -- interface and abstract

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.profiles.active=dev
 
+default.sender=matheus.costa@tutanota.com
+default.recipient=matheus.costa@tutanota.com
+
 jwt.secret=SecretToSignToken
 jwt.expiration=60000
