--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=mysql://be13b5983c0a2a:f756b74f@us-cdbr-east-05.cleardb.net/heroku_da1a0f4753aa833?reconnect=true
+spring.datasource.url=jdbc:mysql://be13b5983c0a2a:f756b74f@us-cdbr-east-05.cleardb.net/heroku_da1a0f4753aa833?reconnect=true
 spring.datasource.username=be13b5983c0a2a
 spring.datasource.password=f756b74f
 
