--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ default.sender=matheus.costa@tutanota.com
 default.recipient=matheus.costa@tutanota.com
 
 jwt.secret=SecretToSignToken
-jwt.expiration=60000
+jwt.expiration=86400000
