--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,14 +1,14 @@
-spring.datasource.url=jdbc:mysql://be13b5983c0a2a:f756b74f@us-cdbr-east-05.cleardb.net/heroku_da1a0f4753aa833?reconnect=true
-spring.datasource.username=be13b5983c0a2a
-spring.datasource.password=f756b74f
+spring.datasource.url=jdbc:${DATABASE}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=false
 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=udemyspringcourse@gmail.com
-spring.mail.password=571NYMuI93J3xWdTbNIpUr
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
